--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -1,21 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.rtl.min.css" integrity="sha384-+qdLaIRZfNu4cVPK/PxJJEy0B0f3Ugv8i482AKY7gwXwhaCroABd086ybrVKTa0q" crossorigin="anonymous">
-
-</head>
-<body>
-    <div class="container">
-        <h1>aqui</h1>
-      
+<%- include('../templates/head') %> 
+<%- include('../components/navbar',{title:'Agenda de Contatos',session:session,created:false}) %> 
+<div class="container home_container">
+    <div class="messages">
+        <%- include('../components/messages') %> 
     </div>
-    <script src="/assets/js/Bunble.js"></script>
+    <% 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-</body>
-</html>
+    if( list.length > 0){
+    %>
+    <%- include('../templates/existsContats',{contacts:list}) %>   
+    <%}else{%>
+        <%- include('../templates/dontExistsContats') %>
+    <%}%>    
+</div>
+<%- include('../templates/footer') %>
